🐞 Fix bug when page has no images; resolve style display issues in dark mode

--- a/assets/stylesheets/styles.css
+++ b/assets/stylesheets/styles.css
@@ -296,4 +296,7 @@ h6 {
     background-color: #555555 !important;
     color: #d5d5d5 !important;
   }
+  .article-item:nth-child(even) {
+    background: #a3a3a3 !important;
+  }
 }
